--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="vendor/normalize.css">
-<link rel="stylesheet" href="vendor/flickity.min.css">
+<link rel="stylesheet" href="vendor/flickity.min.css" media="screen">
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="carousel">
+    <div class="carousel-cell"></div>
+    <div class="carousel-cell"></div>
+    <div class="carousel-cell"></div>
+    <div class="carousel-cell"></div>
+    <div class="carousel-cell"></div>
+  </div>
 
-<script src='flickity.pkgd.min.js'></script>
+<script src='vendor/flickity.pkgd.min.js'></script>
 <script src='js/script.js'></script>
 </body>
 </html>
