--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 </head>
 <body>
   <div class="carousel">
-    <div class="carousel-cell" style="background: url('https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center /cover"><div class="container">
+    <div class="carousel-cell" id="carousel-cell1" style="background: url('https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center /cover"><div class="container">
     <p>
       SLAJD NR 1
       </p></div></div>
-    <div class="carousel-cell" style="background: url('https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover"><div class="container">
+    <div class="carousel-cell" id="carousel-cell2" style="background: url('https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover"><div class="container">
       <p>
         SLAJD NR 2
         </p>
     </div></div>
-    <div class="carousel-cell" style="background: url('https://images.pexels.com/photos/462162/pexels-photo-462162.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center 25%/cover"><div class="container">
+    <div class="carousel-cell" id="carousel-cell3" style="background: url('https://images.pexels.com/photos/462162/pexels-photo-462162.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center 25%/cover"><div class="container">
       <p>
         SLAJD NR 3
         </p>
     </div></div>
-    <div class="carousel-cell" style="background: url('https://images.pexels.com/photos/7919/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover"><div class="container">
+    <div class="carousel-cell" id="carousel-cell4" style="background: url('https://images.pexels.com/photos/7919/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover"><div class="container">
       <p>
         SLAJD NR 4
         </p>
     </div></div>
-    <div class="carousel-cell" style="background: url('https://images.pexels.com/photos/206660/pexels-photo-206660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center 25%/cover"><div class="container">
+    <div class="carousel-cell" id="carousel-cell5" style="background: url('https://images.pexels.com/photos/206660/pexels-photo-206660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center 25%/cover"><div class="container">
       <p>
         SLAJD NR 5
         </p>
@@ -38,6 +38,7 @@
   </div>
 
 <script src='vendor/flickity.pkgd.min.js'></script>
+<script src='vendor/hash.js'></script>
 <script src='js/script.js'></script>
 </body>
 </html>
