--- a/index.html
+++ b/index.html
@@ -4,53 +4,90 @@
 <head>
   <meta charset="UTF-8">
   <title>Tytuł</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="vendor/flickity.min.css" media="screen">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
   <p><button class="button button--toggle">Restart</button></p>
   <div class="carousel">
-    <div class="carousel-cell" id="carousel-cell1" style="background: url('https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center /cover">
+    <!-- <div class="carousel-cell" id="" style="background: url('https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center /cover">
       <div class="container">
-        <p>
+        <h1>
           SLAJD NR 1
-        </p>
+        </h1>
       </div>
     </div>
-    <div class="carousel-cell" id="carousel-cell2" style="background: url('https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover">
+    <div class="carousel-cell" id="" style="background: url('https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover">
       <div class="container">
-        <p>
+        <h1>
           SLAJD NR 2
-        </p>
+        </h1>
       </div>
     </div>
-    <div class="carousel-cell" id="carousel-cell3" style="background: url('https://images.pexels.com/photos/462162/pexels-photo-462162.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center 25%/cover">
+    <div class="carousel-cell" id="" style="background: url('https://images.pexels.com/photos/462162/pexels-photo-462162.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center 25%/cover">
       <div class="container">
-        <p>
+        <h1>
           SLAJD NR 3
-        </p>
+        </h1>
       </div>
     </div>
-    <div class="carousel-cell" id="carousel-cell4" style="background: url('https://images.pexels.com/photos/7919/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover">
+    <div class="carousel-cell" id="" style="background: url('https://images.pexels.com/photos/7919/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover">
       <div class="container">
-        <p>
+        <h1>
           SLAJD NR 4
-        </p>
+        </h1>
       </div>
     </div>
-    <div class="carousel-cell" id="carousel-cell5" style="background: url('https://images.pexels.com/photos/206660/pexels-photo-206660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center 25%/cover">
+    <div class="carousel-cell" id="" style="background: url('https://images.pexels.com/photos/206660/pexels-photo-206660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center 25%/cover">
       <div class="container">
-        <p>
+        <h1>
           SLAJD NR 5
-        </p>
+        </h1>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="progress-bar"></div>
+
+  <script id="template" type="x-tmpl-mustache">
+  <div class="carousel-cell" style="background: url('{{image}}') center /cover">
+    <div class="container">
+      <h1>
+        {{title}}
+      </h1>
+      {{{description}}}
+    </div>
+  </div>
+  </script>
+
+<script>
+var slides = [
+{image: 'https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260',
+title: 'Jezioro',
+description: '<p>Jezioro międz górami w pochmurny dzień</p>'
+},
+{image: 'https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260',
+title: 'Drzewo',
+description: '<p>Samotne drzewo w czasie zachodu słońca</p>'
+},
+{image: 'https://images.pexels.com/photos/462162/pexels-photo-462162.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260',
+title: 'Wybrzeże',
+description: '<p>Wybrzeże nad oceanem w czasie wschodu słońca</p>'
+},
+{image: 'https://images.pexels.com/photos/7919/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260',
+title: 'Las',
+description: '<p>Mglisty las pośród wyrzyn i gór</p>'
+},
+{image: 'https://images.pexels.com/photos/206660/pexels-photo-206660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260',
+title: 'Dolina',
+description: '<p>Dolina wyznaczona przez krętą rzekę</p>'
+}
+];
+</script>
+
+<script src='vendor/mustache.min.js'></script>
   <script src='vendor/flickity.pkgd.min.js'></script>
   <script src='vendor/hash.js'></script>
   <script src='js/script.js'></script>
