--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <!--The div element for the map -->
   <div id="map"></div>
   <script src='js/script.js'></script>
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC0l3eWFlFNgbkSxaBq3-egUk6b3RPZyw">
-  </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC0l3eWFlFNgbkSxaBq3-egUk6b3RPZyw&callback=initMap"
+  type="text/javascript"></script>
 </body>
 
 </html>
