--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <title>Tytuł</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="vendor/normalize.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
+  <!-- <link rel="stylesheet" href="vendor/normalize.css"> -->
   <link rel="stylesheet" href="vendor/flickity.min.css" media="screen">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
